--- a/index.html
+++ b/index.html
@@ -731,6 +731,26 @@ try {
 
     const catLabels = { PTS:'得点', REB:'リバウンド', AST:'アシスト', '3PM':'3P', STL:'スティール', BLK:'ブロック', MIN:'出場時間' };
 
+// MEMO box（選手詳細の最上段に）
+const memo = getMemo(player);
+html += `
+  <div class="memo-box">
+    <div class="memo-head">
+      <div class="memo-title">MEMO</div>
+      <button class="memo-edit" type="button" onclick="window._editMemo()">編集</button>
+    </div>
+    <div class="memo-body">${memo ? escapeHtml(memo) : '<span class="muted">メモなし</span>'}</div>
+  </div>
+`;
+
+window._editMemo = function() {
+  const current = getMemo(player);
+  const next = prompt('メモを入力（保存されます）', current || '');
+  if (next === null) return;
+  setMemo(player, next);
+  renderPlayerDetail(player);
+};
+	  
     // Season high
     let shHTML = '';
     Object.keys(sh).forEach(k => {
